-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.15.6, 6.2.1
-
-
cfcbf38f76 (qt/qtbase/dev) cfcbf38f76 (qt/tqtc-qtbase/dev)
Building the following code gives
fatal error C1083: Cannot open include file: 'main.moc': No such file or directory
main.cpp
#include <QObject> class MyObject : public QObject { Q_OBJECT; MyObject() : QObject(nullptr) {} }; int main() { int number = 100'00; } #include "main.moc"
The code works fine when digit separator is not used (i.e. int number = 10000; )
Checking the generated Makefile, the reason seems main.moc is not included as a dependency for main.obj when digit separator is used.
Sample code is attached qtbug98845.zip
- relates to
-
QTBUG-53326
integer literal notation not recognized
-
- Closed
-