tests/auto/tools/qmake/testdata/findMocs/digitseparated.h
@@ -1,0 +1,8 @@
+#include <QObject>
+
+class AfterDigitSeparator : public QObject
+{
+    Q_OBJECT
+public:
+    AfterDigitSeparator() : QObject(nullptr) {}
+};
