tests/auto/tools/qmake/testdata/findMocs/findMocs.pro
@@ -1,5 +1,6 @@
 DESTDIR	= ./
 
 HEADERS += object1.h object2.h object3.h object4.h \
-        object5.h object6.h object7.h object8.h object9.h
+        object5.h object6.h object7.h object8.h object9.h \
+        digitseparated.h
 SOURCES += main.cpp
